# tap-airbyte-wrapper

./: pyproject.toml
tap_airbyte/: tap.py
