[project]
name = "tap-airbyte"
version = "0.6.0"
description = "`tap-airbyte` is a Singer tap for Airbyte, built with the Meltano Singer SDK."
authors = [{ name = "Alex Butler" }]
keywords = ["ELT", "Airbyte"]
license = { text = "Apache 2.0" }
requires-python = ">=3.9,<3.12"
dependencies = [
    "requests>=2.25.1,<3",
    "singer-sdk==0.46.0",
    "orjson>=3.8.3,<4",
]

[project.optional-dependencies]
s3 = ["fs-s3fs>=1.1.1,<2"]

[dependency-groups]
dev = [
    "pytest>=6.2.5,<7",
    "tox>=3.24.4,<4",
    "flake8>=3.9.2,<4",
    "black>=21",
    "pydocstyle>=6.1.1,<7",
    "mypy>=0.910,<1",
    "types-requests>=2.26.1,<3",
    "isort>=5.10.1,<6",
]

[project.scripts]
tap-airbyte = "tap_airbyte.tap:TapAirbyte.cli"

[tool.black]
line-length = 100
target-version = ["py39"]
preview = true

[tool.isort]
color_output = true
line_length = 100
profile = "black"
src_paths = "tap_airbyte"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
